// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`undo should immediately create an undo level on typing 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">1</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after a pause 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">before pause after pause</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after a pause 2`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">before pause</p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after non input change 1`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">before keyboard <strong>after keyboard</strong></p>
<!-- /wp:paragraph -->"
`;

exports[`undo should undo typing after non input change 2`] = `
"<!-- wp:paragraph -->
<p class="wp-block-paragraph">before keyboard </p>
<!-- /wp:paragraph -->"
`;
